tabla de resultados

--- a/Practica2/Practica.ipynb
+++ b/Practica2/Practica.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "# **Práctica 2**\n",
     "* **Alumno 1**: Bolinches Segovia, Jorge\n",
-    "* **Alumno 2**: Cerezo Pomykol, Jan"
+    "* **Alumno 2**: Cerezo Pomykol, Jan\n",
+    "***"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "622f63a0-ada3-45b3-96d0-140fde22d1e7",
    "metadata": {},
    "outputs": [],
@@ -131,7 +132,7 @@
    "id": "231fc218-07ef-4373-9a96-859f3dd73e71",
    "metadata": {},
    "source": [
-    "### Parámetros por defecto"
+    "#### **Parámetros por defecto**"
    ]
   },
   {
@@ -165,7 +166,7 @@
    "id": "393ee6c5-1b4a-4271-8c0f-a5a3d075ee8e",
    "metadata": {},
    "source": [
-    "### **Parámetro $\\delta$**"
+    "#### **Parámetro $\\delta$**"
    ]
   },
   {
@@ -202,6 +203,7 @@
    "id": "3251df41-b618-4c4c-a61f-d83b04521a45",
    "metadata": {},
    "source": [
+    "***\n",
     "##### Dataset wine"
    ]
   },
@@ -231,6 +233,7 @@
    "id": "971be11c-d681-4b5d-bbb8-3cb5b89451c6",
    "metadata": {},
    "source": [
+    "***\n",
     "##### Dataset cancer"
    ]
   },
@@ -260,6 +263,7 @@
    "id": "cde6cc55-5147-476a-ac4c-26bb6960bd56",
    "metadata": {},
    "source": [
+    "***\n",
     "##### Dataset isolet"
    ]
   },
@@ -289,6 +293,7 @@
    "id": "17c52c7a-6bb8-4aa2-b64a-9a1b4dfc2a1a",
    "metadata": {},
    "source": [
+    "***\n",
     "##### Dataset mnist"
    ]
   },
@@ -311,6 +316,23 @@
     "clf = Perceptron(eta0=0.5, early_stopping=True, random_state=0)\n",
     "scores = cross_val_score(clf, X_mnist, y_mnist, cv=10)\n",
     "print(\"mnist:\\t\", \"%.4f\" % np.mean(scores), \", std: \", \"%.4f\" % np.std(scores), \", time: %.4fs\" % (time()-t0), sep='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cdccf02-e558-414b-9d1a-7bd64968362d",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "#### **Resumen de resultados**\n",
+    "\n",
+    "|dataset|ratio de aprendizaje ($\\delta$)|fraccion de validación interna|tasa de aciertos|\n",
+    "|---|---|---|---|\n",
+    "|iris|default|default|0.6667|\n",
+    "|wine|default|default|0.5297|\n",
+    "|cancer|default|default|0.7823|\n",
+    "|isolet|default|default|0.9259|\n",
+    "|mnist|default|default|0.8687|\n"
    ]
   },
   {
