--- a/Practica2/Practica.ipynb
+++ b/Practica2/Practica.ipynb
@@ -10,7 +10,10 @@
     "* **Alumno 2**: Cerezo Pomykol, Jan\n",
     "***\n",
     "\n",
-    "Este notebook de Jupyter contiene el informe solicitado para la práctica, así como el código empleado para obtener los resultados mencionados."
+    "### **Índice**\n",
+    "* [Carga de datasets](#1)\n",
+    "* [Entrenamiento y evaluación del Perceptrón](#2)\n",
+    "* [Ensemble del clasificador](#3)"
    ]
   },
   {
@@ -18,7 +21,7 @@
    "id": "3c2b50ba-27f0-4a31-b585-a49c4494ca60",
    "metadata": {},
    "source": [
-    "### **Carga de datasets**"
+    "### **Carga de datasets** <a class=\"anchor\" id=\"1\"></a>"
    ]
   },
   {
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "03963aea-c2ca-429d-a858-3124ff783ef6",
    "metadata": {},
    "outputs": [
@@ -116,12 +119,12 @@
    "id": "1edec771-5ed1-4b50-a2ad-1c66ad2ff4b8",
    "metadata": {},
    "source": [
-    "## **Entrenamiento y evaluación del Perceptrón.**"
+    "## **Entrenamiento y evaluación del Perceptrón** <a class=\"anchor\" id=\"2\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fe6c4890-7c68-4649-a8d2-7c47b38951ae",
    "metadata": {},
    "outputs": [],
@@ -411,25 +414,15 @@
    "id": "0f547663-16cc-4619-beed-981e7d5f3f3f",
    "metadata": {},
    "source": [
-    "## **Ensemble del clasificador.**"
+    "## **Ensemble del clasificador** <a class=\"anchor\" id=\"3\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "85c0ef1e-6323-43cd-ae22-90ba774abae7",
+   "execution_count": 29,
+   "id": "3c3e350a-cb60-4734-abb8-6090883fad0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.67 (+/- 0.00) [Vclf iris]\n",
-      "Accuracy: 0.53 (+/- 0.12) [Vclf wine]\n",
-      "Accuracy: 0.78 (+/- 0.21) [Vclf cancer]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
@@ -483,22 +476,84 @@
     "        #se incrementa la iteración y se actualiza la tasa de acierto para la siguiente iteración\n",
     "        i+=+1\n",
     "        anterior = tasa\n",
-    "    print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (tasa, scores.std(), 'Vclf '+name))\n",
-    "ensembler(X_iris, y_iris, 'iris')\n",
-    "ensembler(X_wine,y_wine, 'wine')\n",
-    "ensembler(X_cancer, y_cancer, 'cancer')\n",
-    "#ensembler(X_isolet, y_isolet, 'isolet')\n",
-    "#ensembler(X_mnist, y_mnist, 'mnist')"
+    "    print(name + \":\\tscore: %0.4f (std: %0.4f)\" % (tasa, scores.std()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 22,
+   "id": "2a7b0109-e745-40e4-a898-a72e2e126e52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iris:\tscore: 0.6667 (std: 0.0000)\n",
+      "\ttime: 0.0840s\n",
+      "wine:\tscore: 0.5297 (std: 0.1177)\n",
+      "\ttime: 0.1730s\n",
+      "cancer:\tscore: 0.7823 (std: 0.2063)\n",
+      "\ttime: 0.1120s\n",
+      "isolet:\tscore: 0.9259 (std: 0.0147)\n",
+      "\ttime: 21.1489s\n",
+      "mnist:\tscore: 0.8687 (std: 0.0144)\n",
+      "\ttime: 185.5608s\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time()\n",
+    "ensembler(X_iris, y_iris, 'iris')\n",
+    "print(\"\\ttime: %.4fs\" % (time()-t0))\n",
+    "t0 = time()\n",
+    "ensembler(X_wine,y_wine, 'wine')\n",
+    "print(\"\\ttime: %.4fs\" % (time()-t0))\n",
+    "t0 = time()\n",
+    "ensembler(X_cancer, y_cancer, 'cancer')\n",
+    "print(\"\\ttime: %.4fs\" % (time()-t0))\n",
+    "t0 = time()\n",
+    "ensembler(X_isolet, y_isolet, 'isolet')\n",
+    "print(\"\\ttime: %.4fs\" % (time()-t0))\n",
+    "t0 = time()\n",
+    "ensembler(X_mnist, y_mnist, 'mnist')\n",
+    "print(\"\\ttime: %.4fs\" % (time()-t0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d268504-8153-400b-95f1-db741dcbe63e",
+   "metadata": {},
+   "source": [
+    "## Dataset iris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6c80a687",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iris:\tscore: 0.8133, std: 0.1293, time: 0.4371s\n"
+     ]
+    }
+   ],
    "source": [
     "#Crear el perceptron\n",
-    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.0250)\n",
-    "\n",
+    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.0250, n_jobs=-1)\n",
+    "t0 = time()\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -508,23 +563,44 @@
     "#evaluación con validación cruzada con k=10\n",
     "scores = cross_val_score(Ada, X_iris, y_iris, scoring='accuracy', cv=10)\n",
     "\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Iris'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(\"iris:\\tscore: %0.4f, std: %0.4f, time: %.4fs\" % (scores.mean(), scores.std(), time()-t0))\n",
+    "#print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Iris'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "325776ba-12bd-4c58-9f20-14e34a5e5d8f",
+   "metadata": {},
+   "source": [
+    "## Dataset wine"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 31,
+   "id": "45e5faf3",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wine:\tscore: 0.6304, std: 0.0753, time: 0.4231s\n"
+     ]
+    }
+   ],
    "source": [
     "#Crear el perceptron\n",
-    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.4350)\n",
-    "\n",
+    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.4350, n_jobs=-1)\n",
+    "t0 = time()\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -534,23 +610,44 @@
     "#evaluación con validación cruzada con k=10\n",
     "scores = cross_val_score(Ada, X_wine, y_wine, scoring='accuracy', cv=10)\n",
     "\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Wine'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(\"wine:\\tscore: %0.4f, std: %0.4f, time: %.4fs\" % (scores.mean(), scores.std(), time()-t0))\n",
+    "#print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Wine'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a72d5f8-16ce-4de9-bc8a-7ef8c59c83f3",
+   "metadata": {},
+   "source": [
+    "## Dataset cancer"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 32,
+   "id": "7620021c",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancer:\tscore: 0.8823, std: 0.0422, time: 0.1040s\n"
+     ]
+    }
+   ],
    "source": [
     "#Crear el perceptron\n",
-    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.7330)\n",
-    "\n",
+    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.7330, n_jobs=-1)\n",
+    "t0 = time()\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -560,23 +657,44 @@
     "#evaluación con validación cruzada con k=10\n",
     "scores = cross_val_score(Ada, X_cancer, y_cancer, scoring='accuracy', cv=10)\n",
     "\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Cancer'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(\"cancer:\\tscore: %0.4f, std: %0.4f, time: %.4fs\" % (scores.mean(), scores.std(), time()-t0))\n",
+    "#print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Cancer'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f205dcb-b4ac-49c6-b969-d20e76c4bcc3",
+   "metadata": {},
+   "source": [
+    "## Dataset isolet"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 33,
+   "id": "54b3a2d8",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "isolet:\tscore: 0.9256, std: 0.0153, time: 29.6337s\n"
+     ]
+    }
+   ],
    "source": [
     "#Crear el perceptron\n",
-    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.1300)\n",
-    "\n",
+    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.1300, n_jobs=-1)\n",
+    "t0 = time()\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -586,23 +704,44 @@
     "#evaluación con validación cruzada con k=10\n",
     "scores = cross_val_score(Ada, X_isolet, y_isolet, scoring='accuracy', cv=10)\n",
     "\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Isolet'))\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(\"isolet:\\tscore: %0.4f, std: %0.4f, time: %.4fs\" % (scores.mean(), scores.std(), time()-t0))\n",
+    "#print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Isolet'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8ce0894-3b94-4d1a-98e9-f6db174a177a",
+   "metadata": {},
+   "source": [
+    "## Dataset mnist"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 34,
+   "id": "e6f735c2",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mnist:\tscore: 0.8796, std: 0.0080, time: 136.8499s\n"
+     ]
+    }
+   ],
    "source": [
     "#Crear el perceptron\n",
-    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.7000)\n",
-    "\n",
+    "clf = Perceptron(early_stopping=True, random_state=0, validation_fraction=0.7000, n_jobs=-1)\n",
+    "t0 = time()\n",
     "#Crear el ensemble indicando que queremos hasta 5 perceptrones de los anteriores\n",
     "Ada = AdaBoostClassifier(base_estimator=clf, n_estimators=5, learning_rate=0.5, algorithm='SAMME', random_state=0)\n",
     "\n",
@@ -612,16 +751,17 @@
     "#evaluación con validación cruzada con k=10\n",
     "scores = cross_val_score(Ada, X_mnist, y_mnist, scoring='accuracy', cv=10)\n",
     "\n",
-    "print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Mnist'))\n",
-    "\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(\"mnist:\\tscore: %0.4f, std: %0.4f, time: %.4fs\" % (scores.mean(), scores.std(), time()-t0))\n",
+    "#print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), 'Mnist'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e7e5f3-f6a4-466a-98d7-b82dd9e57b0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
